# Launchlens

./: .claudeignore  .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  .releaserc.json  ADMIN_DASHBOARD_PROGRESS.md  CHANGELOG.md  CLAUDE.md  CLOUD_MIGRATION_GUIDE.md  Dockerfile  HANDOFF-SESSION-11-CREDIT-FRONTEND.md  HANDOFF-SESSION-12-CREDIT-TESTS.md  HANDOFF-SESSION-13-REGISTRATION.md  HANDOFF-SESSION-14-WEBHOOKS.md  HANDOFF-SESSION-15-ADMIN.md  HANDOFF-SESSION-16-E2E-TESTS.md  HANDOFF-SESSION-17-CRITICAL-FIXES.md  HANDOFF-SESSION-18-STUB-FIXES.md  HANDOFF-SESSION-19-TEST-COVERAGE.md  HANDOFF-SESSION-21-DOCUMENTATION.md  MARKETING.md  MASTER_TODO.md  PRE_LAUNCH_AUDIT.md  PROJECT_OVERVIEW_FOR_LLM.md  README.md  TODO-launch.md  TODO-video-template.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  structure.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml  docker.yml  lint.yml  provider-smoke-test.yml  release.yml  staging.yml  test.yml
.vercel/: project.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_outbox_add_tenant_listing_delivered.py  003_users_add_password_hash.py  004_tenant_stripe_fields.py  005_social_content_export_demo.py  006_dollhouse_scenes.py  007_video_assets.py  008_tenant_webhook_url.py  009_api_keys.py  010_credit_accounts_billing_model.py  010_credit_system.py  010_credit_system_and_notifications.py  010_credit_transactions.py  010_notification_preferences.py  011_brand_kit_canva_template.py  011_credit_system.py  013_brand_kit_voice_samples.py  014_pricing_v2.py  015_add_superadmin_role.py  016_tenant_credit_columns.py  017_add_credit_rollover_columns.py  017_add_missing_indexes.py  018_credit_transaction_indexes.py  018_import_jobs.py  019_add_credit_period_columns.py  019_audit_logs.py  020_add_missing_indexes.py  021_credit_transaction_indexes.py  022_audit_logs.py  023_property_data.py  024_add_cancelled_state.py  025_listing_permissions.py  026_add_proxy_path_to_assets.py  027_add_performance_indexes.py  028_add_user_consent_fields.py  029_auto_approve_and_review_metrics.py  029_unique_constraints_brandkit_packagesel.py  030_brand_kit_canva_oauth_tokens.py  030_support_tickets.py  031_add_tenant_preferred_language.py  (+28 more)
design-system/listingjet/: MASTER.md
docker/: entrypoint.sh  init-db.sh  localstack-init.sh
docs/: AI-Models-Overview.md  LISTING-PERMISSIONS-PLAN.md  LaunchLens-PRD-v2.md  LaunchLens-PRD-v3.md  ListingJet-Cost-Analysis.md  PRE_LAUNCH_INFRA_CHECKLIST.md  PROXY-IMAGE-PIPELINE.md  SESSION-HANDOFF-PHASE3.md  SESSION-HANDOFF.md  TEMPORAL_PIPELINE_GUIDE.md  TODO-Qwen-Gemma-Integration.md  VIDEO-PIPELINE-HANDOFF.md  canva-template-sample-data.csv  canva-template-setup.md
docs/archive/: HANDOFF-SESSION-20-API-POLISH.md  HANDOFF-SESSION-22-LEARNING-LOOP.md  HANDOFF-SESSION-APRIL-2-EVE.md  HANDOFF-SESSION-APRIL-2-PM.md  HANDOFF-SESSION-APRIL-2.md  HANDOFF-SESSION-APRIL-22.md  HANDOFF-SESSION-APRIL-23.md  PRE_LAUNCH_CHECKLIST.md
docs/plans/: 2026-03-25-core-services.md  2026-03-25-scaffold.md  2026-03-26-agent-pipeline.md  2026-03-26-api-endpoints.md  2026-03-26-auth.md  2026-03-26-payments.md  2026-03-27-admin-dashboard.md  2026-03-27-cicd.md  2026-03-27-docker-compose.md  2026-03-27-floorplan-agent.md  2026-03-27-frontend-remaining.md  2026-03-27-frontend.md  2026-03-27-monitoring.md  2026-03-27-new-agents.md  2026-03-27-plan-enforcement.md  2026-03-27-temporal-wiring.md  2026-03-27-video-pipeline.md  2026-04-21-cdk-rds-encryption-reconciliation.md
docs/runbooks/: cdk-deploy-recovery.md  r2-cutover.md  (+1 more)
frontend/: .env.example  DESIGN_AUDIT.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
infra/: app.py  cdk.json
scripts/: e2e_local.py  generate-canva-client.sh  migrate_import_jobs.py  prod_smoke.sh  run_prod_migrations.sh  seed_test_user.py  smoke_dollhouse_render.py  smoke_resend.py
tests/: conftest.py  test_config.py  test_database.py  test_temporal_client.py
(+1046 files in other folders)
